--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,83 @@
+# Dependencies
 node_modules
 npm-debug.log
-.next
+pnpm-debug.log
+yarn-error.log
+
+# Testing
+coverage
+.nyc_output
+__tests__
+e2e
+tests-examples
+*.spec.ts
+*.spec.tsx
+*.test.ts
+*.test.tsx
+jest.config.ts
+playwright.config.ts
+
+# Next.js
+.next/
+out/
+build
+dist
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+*.log
+*.log.*
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+
+# Typescript
+*.tsbuildinfo
+
+# IDE
+.idea
 .vscode
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Git
 .git
+.gitignore
+.gitattributes
+
+# Docker
+Dockerfile*
+docker-compose*.yml
+.dockerignore
+
+# Database
+*.db
+*.db-journal
+jobsyncdb/
+
+# Docs
+README.md
+LICENSE
+screenshots/
+
+# Old files
+Dockerfile-old
+docker-compose.old.yml
+
+# API tests
+apiTest.rest
