--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,63 @@
+version: '3.8'
+
 services:
-  app:
-    container_name: jobsync_app
+  jobsync:
     build:
       context: .
       dockerfile: Dockerfile
-    image: jobsync_app_image
+    container_name: jobsync-app
+    restart: unless-stopped
     ports:
       - "3000:3000"
     environment:
-      NODE_ENV: production
-      DATABASE_URL: file:/data/dev.db
-      # Change your initial username and password here
-      USER_EMAIL: admin@example.com
-      USER_PASSWORD: password123
-      # Refer to readme to generate auth secret
-      AUTH_SECRET: Cft42eLmgapfLoot7ByiCL9ToNfbqZ4xaaMuOJsbm+9u
-      NEXTAUTH_URL: http://localhost:3000
-      AUTH_TRUST_HOST: http://localhost:3000
+      - NODE_ENV=production
+      - DATABASE_URL=file:/app/data/dev.db
+      - AUTH_SECRET=${AUTH_SECRET}
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3000}
+      - AUTH_TRUST_HOST=${AUTH_TRUST_HOST:-http://localhost:3000}
+      - USER_EMAIL=${USER_EMAIL:-admin@example.com}
+      - USER_PASSWORD=${USER_PASSWORD:-password123}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://ollama:11434}
     volumes:
-      - ./jobsyncdb/data:/data
+      # Persist SQLite database
+      - ./data:/app/data
+      # Optionally persist uploads/files
+      - ./uploads:/app/public/uploads
+    networks:
+      - jobsync-network
+    depends_on:
+      - ollama
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  ollama:
+    image: ollama/ollama:latest
+    container_name: jobsync-ollama
+    restart: unless-stopped
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama-data:/root/.ollama
+    networks:
+      - jobsync-network
+    # Uncomment if you have GPU support on your Raspberry Pi
+    # deploy:
+    #   resources:
+    #     reservations:
+    #       devices:
+    #         - driver: nvidia
+    #           count: 1
+    #           capabilities: [gpu]
+
+networks:
+  jobsync-network:
+    driver: bridge
+
+volumes:
+  ollama-data:
+    driver: local
